added forecast function

--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
                         </div>
                     </div>
                 </div>
-                <section class="col-lg-9 pb-2 mx-2">
+                <section class="col-lg-9 pb-2 mx-2" id="current">
                     
+                </section>
+
+                <section class="col-md pb-2 mx-2" id="forecast">
+
                 </section>
             </div>
         </section>
