timezone rangeerror, unknown fix

--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
                         </div>
                     </div>
                 </div>
-                <section class="col-lg-9 pb-2 mx-2" id="current">
-                    
+                <section class="container-fluid">
+                    <div class="col-lg-9 pb-2 mx-2" id="current">
+
+                    </div>                    
                 </section>
 
-                <section class="col-md pb-2 mx-2" id="forecast">
+                <section class="container-fluid  id="forecast"">
 
                 </section>
             </div>
