fixed timezone error, added test data to reduce api calls during dev

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
                     </div>                    
                 </section>
 
-                <section class="container-fluid  id="forecast"">
+                <section class="container-fluid">
+                    <div class="row"  id="forecast">
 
+                    </div>
                 </section>
             </div>
         </section>
