first pass at search history

--- a/index.html
+++ b/index.html
@@ -35,16 +35,19 @@
                         </button>
                     </div>
                     <div class="collapse" id="collapse-history">
-                        <div class="card card-body" id="search-history">
+                        <div class="card card-body" >
+                            <div class="card-text" >
+                                <ul id="search-history">
+
+                                </ul>
+                            </div>
 
                         </div>
                     </div>
                 </div>
-                <section class="container-fluid">
-                    <div class="col-lg-9 pb-2 mx-2" id="current">
+                <div class="col-lg-9 pb-2 mx-2" id="current">
 
-                    </div>                    
-                </section>
+                </div>                    
 
                 <section class="container-fluid">
                     <div class="row"  id="forecast">
